--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
         	</form>
         </div>
         
-        <div>
-        	<label id="result"></label> 
-        </div>
+       
+        <div id="result"></div> 
+        
        
  
         <footer class="footer">
