adding lda summarization

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
         		<textarea rows="10" cols="100" name="inputText" id="inputText" class="form-control" placeholder="Paste your ToS here" required autofocus></textarea>
 <!--         		<input type="textarea" name="inputText" id="inputText" class="form-control" placeholder="Text" required autofocus> -->
         		<button id="btnSummarize" class="btn  btn-primary btn-block" type="button">Summarize</button>
+                <button id="btnLDASummarize" class="btn  btn-primary btn-block" type="button">LDA Summarize</button>
         	</form>
         </div>
         
