--- a/templates/index.html
+++ b/templates/index.html
@@ -10,27 +10,27 @@
     <script src="../static/js/summarize.js"></script>
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/tos.css">
  	
  
 </head>
  
 <body>
  
-    <div class="container-fluid">
-        <div class="header">
+<!--     <div class="container-fluid"> -->
+    <div id="section1">
+
+        <div class="section1-header">
         <div class="row">
-    		
-        		<img src="../static/img/terms_of_use.jpg" style="width:50px;height:50px;float:left">
-        	
-        	
-        	<div class="col-sm-11"> <h3 class="text-muted">Terms of Service Summarizer</h3></div>
+        	<img src="../static/img/terms_of_use.jpg" class="image-icon"/>
+        	<div class="col-sm-11"> <h3 class="heading">Terms of Service Summarizer</h3></div>
         </div>
     	</div>
         
     <div class="form-group">
     <div class="row">
     	<div class="col-sm-1"> </div>
-      	<div class="col-sm-2">
+      	<div class="col-sm-2 top">
       	<div>Click either one of these icons or copy-paste ToS in the text area on the right</div> 
       	<br/><br/>
         <a id="fbImg" href="#"><img src="../static/img/facebook.png" style="width:60px;height:50px;"></a>
@@ -41,26 +41,32 @@
         <a id="spImg" href="#"><img src="../static/img/spotify.png" style="width:60px;height:50px;"></a>
         </div>
     
-       <div class="col-sm-8"> 
+       <div class="col-sm-8 top"> 
         	<div class="jumbotron">
         		<form class="form-signin">
         			<label for="inputText" class="sr-only">Paste your ToS here:</label>
-        			<textarea rows="20" cols="100" name="inputText" id="inputText" class="form-control" placeholder="Paste your ToS here" required autofocus></textarea>
-        			<button id="btnSummarize" class="btn  btn-primary btn-block" type="button">Summarize</button>
-        			<button id="btnLDASummarize" class="btn  btn-primary btn-block" type="button">LDA Summarize</button>
+        			<textarea rows="20" cols="100" name="inputText" id="inputText" class="form-control" style="resize:none;" data-role="none" placeholder="Paste your ToS here" required autofocus></textarea>
+<!--         			<div id="length">0</span> -->
+        			<button id="btnSummarize" class="btn  btn-primary btn-block  black-background white" type="button">Summarize</button>
+        			<button id="btnLDASummarize" class="btn  btn-primary btn-block  black-background white" type="button">LDA Summarize</button>
         		</form>
         	</div>
         </div>
         <div class="col-sm-1"> </div>
     </div>
+    </div>
+</div>
+<div id="section2">
+	<div class="form-group">
     <div class="row">
         <div class="col-sm-1"> </div>
         <div class="col-sm-10"> 
         	<div id="result"></div> 
         </div>
         <div class="col-sm-1"> </div>
-       </div>
     </div>
+    </div>
+<!-- </div> -->
  
         <footer class="footer">
             <p>&copy; Terms of Service Summarizer is a part of a class project for NLP course at UC Berkeley. </p>
