--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <title>Terms of Service Summarizer</title>
  
  
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="../static/js/jquery-3.1.1.min.js"></script>
     <script src="../static/js/summarize.js"></script>
  
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/tos.css">
  	
  
